-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia (Android) v0.3 - Mar 15, 2020

 + Record audio button
 + setting: Show 'Record' Button
 + setting: Directory for Recordings
 + save/restore playlist scroll position


fmedia v1.16 - Mar 8, 2020

 + GUI: new command: List -> Read Meta Tags
 + GUI (Windows): "file_delete_method" configuration setting
 + queue: stop playback after many consecutive errors
 * cue: support INDEX value with 'minutes' value 100 and higher
 - GUI (Windows): invalid filename was added to playlist after recording (v1.11 bug)


fmedia v1.15 - Feb 2, 2020

 + Linux: support JACK capture
 + Linux: disable system sleep timer while playing
 * Linux: automatically use ALSA output when Pulse isn't installed
   e.g. "libpulse.so.0" is not found

 * --listdev is more reliable
   Show capture devices list even if playback devices list couldn't be shown

 - .m4a write: .m4a(AAC) files created by fmedia couldn't be opened
     by other players, e.g. VLC (v1.10 bug)
   fmedia can read those files with no problems.

 *! config: don't override "output" if it's already initialized
    e.g. for this configuration:

    output "pulse.out"
    output "alsa.out"

    Pulse (the first one) will be used.


fmedia (Android) v0.2 - Jan 7, 2020

 + GUI: save/restore the current path in explorer
 + GUI: "Add URL" dialog
 + GUI: Filter tracks in playlist
 + GUI: Settings dialog
 + GUI: main menu with commands like "Delete File", "Clear List" and others
 * GUI: reorder UI controls


fmedia v1.14 - Jan 5, 2020

 + .caf reader (AAC, ALAC) (no seeking)
 + @stdin: support seeking forward, which is required by several file formats
 - GUI: Windows: "Sort: Random" didn't work


fmedia (Android) v0.1 - Dec 25, 2019

 The first release for Android.  Install from .apk.
 + Plays local files or directories
 + Very simple UI
 + Control buttons on notification bar

